replace issue my_comment, my_submissions, add voted_by_me_submissions
