# public/api-docs.yaml
@@ -143,6 +143,50 @@ paths:
           description: "submission not found"
       security:
         - apiKey: []
+  /submissions/user/{userID}:
+    get:
+      tags:
+      - "submission"
+      summary: "Find submission by user ID"
+      description: "Returns all submission corresponding with the user ID"
+      operationId: "getSubmissionByUserId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "userID"
+        in: "path"
+        description: "ID of user"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Submission"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "submission not found"
+      security:
+        - apiKey: []
+  /voted_submissions:
+    get:
+      tags:
+      - "submission"
+      summary: "Get all voted Submissions by me"
+      description: "Multiple status values can be provided with comma separated strings"
+      operationId: "getAllSubmissionsVotedByMe"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Submission"
+        400:
+          description: "Invalid status value"
   /news:
     get:
       tags:
